tests/agl/rejections/match/redundant_subsumed.agl
let value = 1
case value of
  | _ => ()
  | 1 => ()
